# mermaid.cpp

./: .gitignore  CMakeLists.txt  README.md  debug_test.cpp  fix.patch  package-lock.json  package.json  partial.mermaid  second_only.mermaid  test_input.mermaid
examples/: sample01_actor.cpp  test_loop.cpp  token_dump.cpp
includes/: ast.hpp  layout.hpp  lexer.hpp  mermaid.h  parser.hpp  renderer.hpp
src/: ast.cpp  cli.cpp  layout.cpp  lexer.cpp  mermaid.cpp  parser.cpp  renderer.cpp
tests/: common.h  test_sequence_diagram_svg.cpp  test_sequence_svg.cpp
tests/data/: alt_else_basic.mermaid  blocks_par_alt.mermaid  complex_seq_diagram.mermaid  mixed_features.mermaid  note_basic.mermaid  three_participants.mermaid
tests/data/sequence_diagram/: activation_both.mermaid  activation_both.svg.bak  activation_destroy.mermaid  activation_multiple.mermaid  activation_source_ltr.mermaid  activation_target_rtl.mermaid  actor_basic.mermaid  loop_basic.mermaid  notes_and_messages.mermaid  opt_basic.mermaid  par_basic.mermaid  simple_alias.mermaid
tests/tools/: update_golden_svgs.sh  update_golden_svgs_online.sh
tools/: update_golden_svgs.sh
